kubernetes/namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: container-vote
  labels:
    name: container-vote
