kubernetes/store.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: store
  namespace: container-vote
  labels:
    app: store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: store
  template:
    metadata:
      labels:
        app: store
    spec:
      containers:
      - name: store
        image: bgever/container-vote:store-latest
