kubernetes/api.yml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: api
  namespace: container-vote
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
        version: v0.0.1
    spec:
      containers:
      - name: api
        image: bgever/container-vote:api-latest
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: api
  namespace: container-vote
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: api
