kubernetes/redis.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: redis
  namespace: container-vote
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:alpine
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 6379
---
kind: Service
apiVersion: v1
metadata:
  name: redis
  namespace: container-vote
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
