kubernetes/app-ingress.yml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: app
  namespace: container-vote
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: http
  - http:
      paths:
      - path: /api/
        backend:
          serviceName: api
          servicePort: http
