kubernetes/traefik-web-ui-svc.yml
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-web-ui
  namespace: container-vote
spec:
  selector:
    k8s-app: traefik-ingress-lb
  ports:
  - name: web
    port: 80
    targetPort: 8080
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: traefik-web-ui
  namespace: container-vote
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: traefik-ui.minikube
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-web-ui
          servicePort: web
